--- a/client/src/LoginPage/LoginPage.css
+++ b/client/src/LoginPage/LoginPage.css
@@ -27,14 +27,12 @@
 .connect-with-friends-title {
     margin-top: 10px;
     width:100%;
-    /* border:1px solid green; */
     margin-bottom: 32px;
     font-size: 20px;
     text-align: left;
 }
 
 .login-container {
-    /* border: 0.5px solid red; */
     border-radius: 5px;
     font-size: 20px;
     grid-area: 2 / 5 / 7 / 8; 
@@ -45,11 +43,10 @@
 }
 
 .action-button {
-    background-color: #04AA6D; /* Green */
+    background-color: #04AA6D; 
     border: none;
     color: white;   
     margin-top:20px;
-    /* padding: 10px 20px; */
     padding: 20px 40px;
     text-align: center;
     text-decoration: none;
@@ -63,9 +60,3 @@
 .celebrity-page-link {
     grid-area: 8 / 5 / 9 / 8;
 }
-
-/* .button1 {border-radius: 2px;}
-.button2 {border-radius: 4px;}
-.button3 {border-radius: 8px;}
-.button4 {border-radius: 12px;}
-.button5 {border-radius: 50%;} */
