--- a/client/src/FeedPage/styles.css
+++ b/client/src/FeedPage/styles.css
@@ -103,13 +103,17 @@
     height: 20px;
     display: inline-block;
 }
+.post-image {
+    max-width: 100%;
+    max-height: 100%;
+}
 .card.post {
-    position: relative; 
+    position: relative;
 }
 
 .remove-post-button {
     position: absolute;
-    top: 10px; 
+    top: 10px;
     right: 10px;
     padding: 5px;
     border: none;
@@ -180,32 +184,32 @@ a {
 }
 
 .comment-box {
-    margin-top: 1rem; 
+    margin-top: 1rem;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
 }
 
 .comment-area {
     padding: 0.5rem 1rem;
     border: 1px solid #ddd;
-    border-radius: 5px; 
+    border-radius: 5px;
     resize: none;
-    height: 3rem; 
+    height: 3rem;
 }
 
 .comment-area:focus {
-    outline: none; 
-    border-color: #ccc; 
+    outline: none;
+    border-color: #ccc;
 }
 
 .comment-box button {
-    background-color: #3897f0; 
-    color: #fff; 
+    background-color: #3897f0;
+    color: #fff;
     padding: 0.5rem 1rem;
     border: none;
-    border-radius: 5px; 
+    border-radius: 5px;
     cursor: pointer;
-    margin-top: 0.5rem; 
+    margin-top: 0.5rem;
 }
 
 body {
@@ -318,24 +322,24 @@ body {
 }
 
 .edit-post-button {
-    background-color: transparent; 
+    background-color: transparent;
     border: none;
     position: absolute;
-    top: 10px; 
+    top: 10px;
     right: 30px;
     padding: 5px;
     cursor: pointer;
-    color: #3897f0; 
+    color: #3897f0;
 }
 
 .edit-post-button:hover {
-    text-decoration: underline; 
+    text-decoration: underline;
 }
 
 .profile-image {
-    width: 50px; 
-    height: 50px; 
-    border-radius: 50%; 
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
     position: fixed;
     cursor: pointer;
     top: 20px;
@@ -346,7 +350,7 @@ body {
 
 .remove-user-button {
     position: absolute;
-    top: 10px; 
+    top: 10px;
     right: 25px;
     padding: 5px;
     border: none;
@@ -357,22 +361,22 @@ body {
 }
 
 .remove-user-button:hover {
-    text-decoration: underline; 
+    text-decoration: underline;
     color: #333;
 }
 
 .edit-user-button {
-    background-color: transparent; 
+    background-color: transparent;
     border: none;
     position: absolute;
-    top: 30px; 
+    top: 30px;
     right: 10px;
     padding: 5px;
     cursor: pointer;
-    color: #3897f0; 
+    color: #3897f0;
 }
 
 .edit-user-button:hover {
-    text-decoration: underline; 
+    text-decoration: underline;
     color: #333;
-  }
+}
